--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
+    "react-awesome-button": "^7.0.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
   },
@@ -24,6 +25,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.66.0",
     "vite": "^4.4.5"
   }
 }
